api-server/deployment/api-server-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
spec:
  selector:
    matchLabels:
      app: api-server
  replicas: 1
  template:
    metadata:
      labels:
        app: api-server
    spec:
      containers:
      - name: api-server
        image: evolvere/api-server:v0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 5001
