api-server/deployment/api-server-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-server
  labels:
    app: api-server
spec:
  containers:
    - name: api-server-container
      image: evolvere/api-server:v0.0.1
      ports:
        - containerPort: 5001
