api-server/deployment/api-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-server
  namespace: student00
  labels:
    service: api-server
spec:
  type: NodePort
  selector:
    app: api-server
  ports:
  - name: api-server
    port: 5001
    targetPort: 5001
