api-server/deployment/api-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: api-server
spec:
  ingressClassName: nginx
  rules:
  - host: api-server.evolvere.link
    http: paths:
      - backend:
          service:
            name: api-server
            port:
              number: 5001
        path: /
        pathType: Prefix
